Xi method implemented

--- a/word_level_da/.editorconfig
+++ b/word_level_da/.editorconfig
@@ -24,6 +24,7 @@ test_file=golden_truth.txt
 [depresion19_drive]
 training = /content/drive/My Drive/Data/depresion/2019/train/
 test = /content/drive/My Drive/Data/depresion/2019/test/
+augmented = /content/drive/My Drive/Data/depresion/2019/augmented/
 training_folder=prep_chunks_filtered_neg_only
 training_file=golden_truth_filtered.txt
 test_folder=prep_chunks
