added server dirs

--- a/word_level_da/.editorconfig
+++ b/word_level_da/.editorconfig
@@ -12,11 +12,14 @@ training_file=golden_truth_filtered.txt
 test_folder=prep_chunks
 test_file=golden_truth.txt
 
-
 [anorexia18_local]
 training=D:/corpus/anorexia/2018/train/
 test =D:/corpus/anorexia/2019/
 augmented = D:/corpus/anorexia/2018/train/augmented/
+training_folder=prep_chunks_filtered
+training_file=train_golden_truth_filtered.txt
+test_folder=prep_chunks
+test_file=test_golden_truth.txt
 
 [depresion19_local]
 training = D:/corpus/DepresionEriskCollections/2019/train/
@@ -27,10 +30,48 @@ training_file=golden_truth_filtered.txt
 test_folder=prep_chunks
 test_file=golden_truth.txt
 
+
+[depresion18_drive]
+training = /content/drive/My Drive/Data/depresion/2017/
+test = /content/drive/My Drive/Data/depresion/2018/
+augmented = /content/drive/My Drive/Data/depresion/2017/augmented/
+training_folder=prep_chunks_filtered
+training_file=golden_truth_filtered.txt
+test_folder=prep_chunks
+test_file=golden_truth.txt
+
 [depresion19_drive]
 training = /content/drive/My Drive/Data/depresion/2019/train/
 test = /content/drive/My Drive/Data/depresion/2019/test/
 augmented = /content/drive/My Drive/Data/depresion/2019/train/augmented/
+training_folder=prep_chunks_filtered_neg_only
+training_file=golden_truth_filtered.txt
+test_folder=prep_chunks
+test_file=golden_truth.txt
+
+
+[depresion18_inaoe]
+training=/001/usuarios/victor.jimenez/depresion/2017/train/
+test =/001/usuarios/victor.jimenez/depresion/2018/
+augmented = /001/usuarios/victor.jimenez/depresion/2017/train/augmented/
+training_folder=prep_chunks_filtered
+training_file=golden_truth_filtered.txt
+test_folder=prep_chunks
+test_file=golden_truth.txt
+
+[anorexia18_inaoe]
+training=/001/usuarios/victor.jimenez/anorexia/train/
+test =/001/usuarios/victor.jimenez/anorexia/test/
+augmented = /001/usuarios/victor.jimenez/anorexia/train/augmented/
+training_folder=prep_chunks_filtered
+training_file=train_golden_truth_filtered.txt
+test_folder=prep_chunks
+test_file=test_golden_truth.txt
+
+[depresion19_inaoe]
+training = /001/usuarios/victor.jimenez/depresion/2019/train/
+test = /001/usuarios/victor.jimenez/depresion/2019/test/
+augmented= /001/usuarios/victor.jimenez/depresion/2019/train/augmented/
 training_folder=prep_chunks_filtered_neg_only
 training_file=golden_truth_filtered.txt
 test_folder=prep_chunks
