Incorporated macro score metrics

--- a/word_level_da/.editorconfig
+++ b/word_level_da/.editorconfig
@@ -5,12 +5,12 @@ truth_name=golden_truth.txt
 
 [depresion18_local]
 training= D:/corpus/DepresionEriskCollections/2017/train/
-test = D:/corpus/DepresionEriskCollections/2017/test/
+test = D:/corpus/DepresionEriskCollections/2018/
 augmented= D:/corpus/DepresionEriskCollections/2017/train/augmented/
-training_folder=prep_chunks_val_filtered
-training_file=golden_truth_val_filtered.txt
+training_folder=prep_chunks_filtered
+training_file=golden_truth_filtered.txt
 test_folder=prep_chunks
-test_file=test_golden_truth.txt
+test_file=golden_truth.txt
 
 [anorexia18_local]
 training=D:/corpus/anorexia/2018/train/
@@ -35,8 +35,8 @@ test_file=golden_truth.txt
 training = /content/drive/My Drive/Data/depresion/2017/
 test = /content/drive/My Drive/Data/depresion/2018/
 augmented = /content/drive/My Drive/Data/depresion/2017/augmented/
-training_folder=prep_chunks_val_filtered
-training_file=golden_truth_val_filtered.txt
+training_folder=prep_chunks_filtered
+training_file=train_golden_truth_filtered.txt
 test_folder=prep_chunks
 test_file=test_golden_truth.txt
 
